Fix layout issue with new landing page

--- a/public/stylesheets/web.css
+++ b/public/stylesheets/web.css
@@ -189,11 +189,13 @@ td, th{padding:0;}
 	font:14px Arial, Helvetica, sans-serif;
 	border:1px solid #999;
 	padding: 4px 0;
-	margin: 0 12px 0 4px;
 }
 .welcome-box label{
 	font:17px/19px Arial, Helvetica, sans-serif;
 	margin:0;
+}
+.welcome-box .right-label{
+	margin-left: 12px;
 }
 .welcome-box .promo-box {
 	float:right;
